--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,22 @@
 services:
-  envoy:
-    image: bitnami/envoy:1.32.1-debian-12-r1
-    container_name: envoy_proxy
-    # restart: always
-    command: ["-c", "/etc/envoy/envoy.yaml"]
-    volumes:
-      - ./pb:/pb:ro
-      - ${PWD}/infrastructure/envoy.yaml:/etc/envoy/envoy.yaml:ro
-    network_mode: host
-  postgres:
+  auth_postgres:
     image: postgres:16.4-bookworm
-    container_name: postgres
+    container_name: auth_postgres
     restart: always
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
       POSTGRES_DB: auth
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-    network_mode: host
+      - auth_postgres_data:/var/lib/postgresql/data
+    networks:
+      - floral
+    ports:
+      - "5432:5432"
+
+networks:
+  floral:
+    driver: bridge
 
 volumes:
-  postgres_data:
+  auth_postgres_data:
