feat(products):add oapi code generation

--- a/terraform/config/api-gateway-spec.yaml
+++ b/terraform/config/api-gateway-spec.yaml
@@ -306,6 +306,10 @@ components:
       properties:
         seller:
           type: object
+          required:
+          - name
+          - email
+          - password
           properties:
             email:
               type: string
